--- a/BlazorApplication/BlazorServer/Pages/Counter.razor
+++ b/BlazorApplication/BlazorServer/Pages/Counter.razor
@@ -4,12 +4,13 @@
 
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p style="font-family:@fontFamily" role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
     private int currentCount = 0;
+    private string fontFamily = "Monotype Corsiva";
 
     private void IncrementCount()
     {
