--- a/BlazorApplication/BlazorServer/Pages/Counter.razor
+++ b/BlazorApplication/BlazorServer/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@inherits CounterBase
 
 <PageTitle>Counter</PageTitle>
 
@@ -7,13 +8,3 @@
 <p style="font-family:@fontFamily" role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
-@code {
-    private int currentCount = 0;
-    private string fontFamily = "Monotype Corsiva";
-
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
-}
